--- a/hm1/hm1.tex
+++ b/hm1/hm1.tex
@@ -9,7 +9,7 @@
 \title{\color{red}CARNEGIE MELLON UNIVERSITY\\
 APPLIED STOCHASTIC PROCESSES  (COURSE 18-751)\\
 HOMEWORK 1}
-\author{Daniel Fekadu}
+\author{Daniel Marew}
 \date{\today}
 \maketitle
 \newpage
@@ -169,4 +169,12 @@ so the expected time from $0$ to $2$ is $ 3.708$
 \end{figure}
 \newpage 
 \section*{Q3}
+\subsection*{(a) Page Rank}
+we can rank the states by their value in the invariant distribution($\pi$)\\\\
+1. state(page) 2\\
+2. state(page) 1\\
+3. state(page) 3\\
+\subsection*{(b) Page Rank}
+\subsection*{(c) Page Rank}
+
 \end{document}
