--- a/hm1/hm1.tex
+++ b/hm1/hm1.tex
@@ -38,7 +38,16 @@ APPLIED STOCHASTIC PROCESSES  (COURSE 18-751)\\
 HOMEWORK 1}
 \author{Daniel Marew}
 \date{\today}
+
+
 \maketitle
+I collaborated with :\\
+\hspace*{6cm}
+Nebyou Yismaw\\
+\hspace*{6cm}
+Daniel    Nkemelu\\
+\hspace*{6cm}
+Agatha Niwomugizi
 \newpage
 \section*{Q.1 prove with Venn diagrams}
 \subsection*{(a) $A \cap B^c = A-B$}
@@ -396,7 +405,7 @@ lets write everything interms of $\pi_1$\\
 \end{eqnarray}•
 similarly  $\pi_{oa} = \frac{18}{70}\pi_1\approx0.085$, $\pi_0=\frac{6}{7}\pi_1\approx0.284$, $\pi_2=0.5\pi_1\approx0.165$, $\pi_{1a}=0.4\pi_1\approx0.132$
 $$
-\pi = \begin{bmatrix}
+\pi \approx \begin{bmatrix}
 0.085 \quad 0.284 \quad 0.331 \quad 0.165 \quad 0.132    
 \end{bmatrix}•
 $$
@@ -413,7 +422,7 @@ for the MC in (b)
 \pi_2  = 0.7\pi_1\\
 \pi_0+\pi_1+\pi_2=1
 \end{eqnarray}•
-solving the above equations we get\\
+solving the equations above we get\\
 $$
 \pi = \begin{bmatrix}
 \frac{10}{27} \quad \frac{10}{27} \quad \frac{7}{27}    
