--- a/hm2/hm2.tex
+++ b/hm2/hm2.tex
@@ -9,7 +9,7 @@
 \title{\color{red}CARNEGIE MELLON UNIVERSITY\\
 APPLIED STOCHASTIC PROCESSES  (COURSE 18-751)\\
 HOMEWORK 2}
-\author{Daniel Fekadu}
+\author{Daniel Marew}
 \date{\today}
 \maketitle
 \clearpage
