--- a/hm2/hm2.tex
+++ b/hm2/hm2.tex
@@ -79,7 +79,7 @@ The three axioms of probability are :\\
 Assigning $P[\{1\}]=1$, $P[\{2\}]=1$ , $P[\{1,2\}]=2$ is consistant with the first axiom because all the elements of $\mathcal{F}$ have $P \ge 0$, we can also assign $P(S) = P(\{1,2,3,4,5,6\}) = 1$ so it satisfies the second axiom.
 When it comes to the third axiom, the only elements of $\mathcal{F}$ that are pair wise disjoint are \{1\} and \{2\}.\\\\
  $P(\{1\}\cup \{2\})=P(\{1,2\}) = 2 = P(\{1\}) + P(\{2\})$ hence it is also consitstant with third axiom.\\
- Therefor, $P[\{1\}]=1$, $P[\{2\}]=1$ , $P[\{1,2\}]=2$ is consistant with the three axioms of probability.
+ Therefore, $P[\{1\}]=1$, $P[\{2\}]=1$ , $P[\{1,2\}]=2$ is consistant with the three axioms of probability.
 
 \subsection*{(b)}
 
@@ -104,8 +104,14 @@ lets assume  it is consistant with the third axiom,\\ that means $P(\{1,2\} \cup
  
 \newpage
 \section*{Q4}
+\subsection*{(a) No Kings}
+We have 48 cards that are not King cards, hence we can select four cards that are not king cards in ${48 \choose 4} = 194580 $  different ways. \\\\
+Ans. 194580
+\subsection*{(b) 2 Kings and 2 Queens}
+We have four kings so we can select two of them in ${ 4 \choose 2}$ ways similarly we can draw two Queens in  ${ 4 \choose 2}$ ways. Hence we can draw two Kings and two Queens in ${ 4 \choose 2}*{ 4 \choose 2}=36$ ways.\\\\
+Ans. 36
 
-
+\subsection*{(c) Number of Possible combinations of $(n_h,n_d,n_s,n_c)$}
 
 \newpage
 \section*{Q5}
