done for the night

--- a/hm3/hm3.tex
+++ b/hm3/hm3.tex
@@ -73,14 +73,50 @@ $$s_n^2=(\sigma_1^2+\sigma_2^2+\dots+\sigma_n^2)=n\sigma^2$$
 $$Yn = \frac{(X_1+X_2+ \dots +X_n-n\mu)}{\sqrt{n\sigma^2}}$$
 $$Yn = \frac{(X_1+X_2+ \dots +X_n-n\mu)}{\sigma\sqrt{n}}$$
 hence , GCLT reduces to CLT when \{$X_k$\} are i.i.ds.
-
-\subsection*{(b)}
-\subsection*{(c)}
 \newpage
-
+\subsection*{(b)\quad $X_k$ uniformly distributed from 1 to 5}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_b_1}
+    \caption{Normalized histogram Vs pdf of standard normal distribution}\label{fig:q2_b_1}
+\end{figure}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_b_2}
+    \caption{q-q plot}\label{fig:q2_b_2}
+\end{figure}
+\newpage
+\clearpage
+\subsection*{(c)\quad $X_k$ uniformly distributed from 1 to k}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_c_1}
+    \caption{Normalized histogram Vs pdf of standard normal distribution}\label{fig:q2_c_1}
+\end{figure}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_c_2}
+    \caption{q-q plot}\label{fig:q2_c_2}
+\end{figure}
+\newpage
+\clearpage
+\subsection*{(d)\quad $X_k=\frac{B_k}{2^k}$  where $B_k$ is a Bernoulli trail with $p=0.5$}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_d_1}
+    \caption{Normalized histogram Vs pdf of standard normal distribution}\label{fig:q2_d_1}
+\end{figure}
+\begin{figure}[h]
+   \hspace*{-4cm}
+    \includegraphics[scale=0.4]{q2_d_2}
+    \caption{q-q plot}\label{fig:q2_d_2}
+\end{figure}
+\subsection*{(e) How well the sum of the first ten elements is approximated by a normal distribution?}
+\newpage
+\clearpage
 \section*{Q3 \quad Buffers}
 
-\subsection*{(a) for $\lambda = 0.1$, $\mu=0.12$, $BufferSize=10$ and $NumberOf Steps=1000$ we get table\ref{tab:q3} and figure \ref{fig:q3a} }
+\subsection*{(a) for $\lambda = 0.1$, $\mu=0.12$, $BufferSize=10$ and $NumberOf Steps=1000$ we get Table \ref{tab:q3a} and figure \ref{fig:q3_a} }
 
 \begin{table}
 \centering
@@ -98,7 +134,7 @@ hence , GCLT reduces to CLT when \{$X_k$\} are i.i.ds.
 \begin{figure}[h]
    \hspace*{-6cm}
     \includegraphics[scale=0.5]{q3_1}
-    \caption{Number of packets in the buffer Vs Time steps}\label{fig:q3a}
+    \caption{Number of packets in the buffer Vs Time steps}\label{fig:q3_a}
 \end{figure}
 \subsection*{(b) for $\lambda = 0.1$, $\mu=0.01$, $BufferSize=10$ and $NumberOf Steps=100$ we get table\ref{tab:q3b} and figure \ref{fig:q3b} }
 
